# FastAPIProject

./: .gitignore  alembic.ini  config.py  main.py  package-lock.json  package.json  playwright.config.js  pyproject.toml
alembic/: env.py
alembic/versions/: 2d952167bfec_replace_is_admin_with_role.py  320099125cfe_add_is_admin_field.py
api/: routes.py
database/: __init__.py  init_db.py  session.py
dependencies/: auth.py
frontend/: package-lock.json
frontend/src/: App.js
frontend/src/components/: AddUserForm.css  AddUserForm.js  DeleteUser.css  DeleteUser.jsx  FormLayout.css  FormLayout.jsx  HomeForm.css  HomeForm.jsx  LoginForm.css  LoginForm.js  UpdateUser.css  UpdateUser.jsx  UserInfo.css  UserInfo.jsx
middlewares/: logging_middleware.py
models/: user.py
playwright_js/: adduser.spec.js  login.spec.js
playwrightpython/: test_login.py
routers/: __init__.py  auth.py  auth_route.py  monitoring.py  users.py  users_route.py
schemas/: user.py
tests/: conftest.py  test.db  test_users.py
utils/: jwt.py  logger.py  support_methods.py
