[tool.poetry]
name = "fastapi-project"
version = "0.1.0"
description = "FastAPI project with authentication and Alembic"
authors = ["Your Name <you@example.com>"]
readme = ""
packages = [{ include = "routers" }, { include = "models" }, { include = "schemas" }, { include = "utils" }, { include = "database" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.0"
sqlalchemy = "^2.0.0"
pymysql = "^1.1.0"
python-jose = "^3.3.0"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-multipart = "^0.0.9"
pydantic-settings = "^2.0.3"
email-validator = "^2.2.0"

[tool.poetry.dev-dependencies]
alembic = "^1.13.1"
pre-commit = "^3.6.0"
black = "^24.3.0"
mypy = "^1.9.0"
pytest = "^8.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"